--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "author": "Darrius Wright",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
+    "dev": "npm run blog:watch & nuxt",
+    "build": "npm run blog:build && nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "test": "jest"
+    "generate": "npm run blog:build && nuxt generate",
+    "test": "jest",
+    "blog:build": "gulp",
+    "blog:manifest": "gulp manifest",
+    "blog:watch": "gulp watch",
+    "blog:post": "gulp post --option"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.17",
@@ -18,13 +22,14 @@
     "@fortawesome/free-solid-svg-icons": "5.8.1",
     "@fortawesome/vue-fontawesome": "0.1.6",
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/markdownit": "1.2.4",
+    "@nuxtjs/google-analytics": "^2.2.0",
+    "@nuxtjs/google-tag-manager": "^2.2.0",
     "@nuxtjs/pwa": "^2.6.0",
     "bootstrap": "4.3.1",
     "cross-env": "^5.2.0",
-    "jquery": "3.3.1",
+    "jquery": "^3.4.1",
     "lodash": "4.17.11",
-    "nuxt": "^2.4.0",
+    "nuxt": "^2.6.3",
     "popper.js": "1.15.0",
     "vue-highlightjs": "1.3.3",
     "vue-markdown": "2.2.4"
@@ -33,9 +38,14 @@
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^24.1.0",
+    "del": "^4.1.1",
+    "front-matter": "^3.0.2",
     "frontmatter-markdown-loader": "1.6.0",
+    "gulp": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-transform": "^3.0.5",
     "jest": "^24.1.0",
-    "node-sass": "4.11.0",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
     "sass-loader": "7.1.0",
     "vue-jest": "^3.0.3"
