--- a/static/blogManifest.json
+++ b/static/blogManifest.json
@@ -1,21 +1,21 @@
 [
   {
-    "description": "Learn how to test APIs using httpbin, Docker, supertest, and Jest",
-    "title": "API Testing Sandbox",
+    "description": "Learn how to test an API by creating your very own sandbox to practice testing",
+    "title": "How Learn API Testing Without a Real API",
     "image": "/posts/testing.png",
     "date": "Sun, 05 May 2019 03:28:47 GMT",
     "route": "/blog/posts/api-testing-sandbox"
   },
   {
-    "description": "Learn how to develop a serverless express application using the aws-serverless-express package.",
-    "title": "AWS Serverless Express",
+    "description": "Learn how to change an ExpressJS API into a serverless API with just a few changes.",
+    "title": "How To Turn An ExpressJS API Into A Serverless API",
     "image": "/posts/lambda.png",
     "date": "Sun, 05 May 2019 02:48:40 GMT",
     "route": "/blog/posts/aws-serverless-express"
   },
   {
-    "description": "Develop a JavaScript API Testing framework using Jest and Supertest",
-    "title": "JavaScript API Testing",
+    "description": "Create a JavaScript API Testing framework using common JavaScript libraries",
+    "title": "How To Write JavaScript API Tests",
     "image": "/posts/javascript.png",
     "date": "Thu, 02 May 2019 05:21:28 GMT",
     "route": "/blog/posts/javascript-api-testing"
