--- a/package.json
+++ b/package.json
@@ -1,53 +1,21 @@
 {
-  "name": "softwarebywright.github.io",
+  "name": "softwarewright.github.io",
   "version": "1.0.0",
-  "description": "Software By Wright Website",
-  "author": "Darrius Wright",
-  "private": true,
+  "description": "> Software By Wright Website",
+  "main": "index.js",
   "scripts": {
-    "dev": "npm run blog:watch & nuxt",
-    "build": "npm run blog:build && nuxt build",
-    "start": "nuxt start",
-    "generate": "npm run blog:build && nuxt generate",
-    "test": "jest",
-    "blog:build": "gulp",
-    "blog:manifest": "gulp manifest",
-    "blog:watch": "gulp watch",
-    "blog:post": "gulp post --option"
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "1.2.17",
-    "@fortawesome/free-brands-svg-icons": "5.8.1",
-    "@fortawesome/free-regular-svg-icons": "5.8.1",
-    "@fortawesome/free-solid-svg-icons": "5.8.1",
-    "@fortawesome/vue-fontawesome": "0.1.6",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/google-analytics": "^2.2.0",
-    "@nuxtjs/google-tag-manager": "^2.2.0",
-    "@nuxtjs/pwa": "^2.6.0",
-    "bootstrap": "4.3.1",
-    "cross-env": "^5.2.0",
-    "jquery": "^3.4.1",
-    "lodash": "4.17.11",
-    "nuxt": "^2.6.3",
-    "popper.js": "1.15.0",
-    "vue-highlightjs": "1.3.3",
-    "vue-markdown": "2.2.4"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/softwarewright/softwarewright.github.io.git"
   },
-  "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^24.1.0",
-    "del": "^4.1.1",
-    "front-matter": "^3.0.2",
-    "frontmatter-markdown-loader": "1.6.0",
-    "gulp": "^4.0.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-transform": "^3.0.5",
-    "jest": "^24.1.0",
-    "node-sass": "^4.12.0",
-    "nodemon": "^1.18.9",
-    "sass-loader": "7.1.0",
-    "vue-jest": "^3.0.3"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/softwarewright/softwarewright.github.io/issues"
+  },
+  "homepage": "https://github.com/softwarewright/softwarewright.github.io#readme"
 }
