--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "homepage": "https://github.com/softwarewright/softwarewright.github.io#readme",
   "dependencies": {
     "bootstrap": "^4.3.1"
+  },
+  "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^1.0.3",
+    "vuepress": "^1.0.3"
   }
 }
