--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@vuepress/plugin-google-analytics": "^1.0.3",
-    "vuepress": "^1.0.3"
+    "vuepress": "^1.0.3",
+    "vuepress-plugin-disqus": "^0.1.1"
   }
 }
