--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ jobs:
     - script: npm test
     - stage: deploy
       script: 
-        - chmod +x ./deploy.sh
+        - chmod +x ./deploy_ci.sh
         - npm run deploy:ci
       if: branch = vuepress
