--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,6 +22,7 @@ jobs:
         npm ci
         npm run build --if-present
         npm test
+        chmod +x ./deploy.sh
         npm run deploy
       env:
         CI: true
