--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
   },
   "homepage": "https://github.com/softwarewright/softwarewright.github.io#readme",
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "vuepress-plugin-sitemap": "^2.1.2"
+    "bootstrap": "^4.3.1"
   },
   "devDependencies": {
     "@vuepress/plugin-google-analytics": "^1.0.3",
-    "vuepress": "^1.0.3",
+    "vuepress": "^1.1.0",
     "vuepress-plugin-disqus": "^0.1.1",
-    "vuepress-plugin-feed": "^0.1.7"
+    "vuepress-plugin-feed": "^0.1.7",
+    "vuepress-plugin-git-log": "^1.0.1",
+    "vuepress-plugin-sitemap": "^2.1.2"
   }
 }
