--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,6 +18,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
+      with:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
         npm ci
         npm run build --if-present
