--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,8 +22,14 @@ jobs:
         npm ci
         npm run build --if-present
         npm test
+      env:
+        CI: true
+    - name: deploy
+      run: |
         chmod +x ./deploy_ci.sh
         npm run deploy:ci
+      if: github.ref == 'refs/heads/vuepress'
       env:
         CI: true
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      
